Add react to project

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <h1>Cards against humanity</h1>
+    <div id="app"></div>
+
+    <script src="/public/js/bundle.js"></script>
 </body>
 </html>
