--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>CAH</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet"> 
 </head>
 <body>
     <div id="app"></div>
